[MODFISTO-273] - Test updated